MODIFIED: hero description

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
         <h1 class="head head--xl">
           Earth Mightiest Heroes
         </h1>
-        <p>
+        <p class="heroDescription">
           Listen, this is very important, I forgot my video camera, could you stop by my place and pick it up on your way to the mall? Does your mom know about tomorrow night? Yes, definitely, god-dammit George, swear.
         </p>
         <a class="button mt-8">
